--- a/SyncCommands-spigot/pom.xml
+++ b/SyncCommands-spigot/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>xyz.efekurbann</groupId>
         <artifactId>SyncCommands</artifactId>
-        <version>1.0</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>SyncCommands-spigot</artifactId>
@@ -65,6 +65,12 @@
             <artifactId>annotations</artifactId>
             <version>22.0.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>2.2.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
