--- a/SyncCommands-common/pom.xml
+++ b/SyncCommands-common/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>xyz.efekurbann</groupId>
+        <groupId>io.github.efekurbann</groupId>
         <artifactId>SyncCommands</artifactId>
         <version>1.0.1</version>
     </parent>
