--- a/SyncCommands-spigot/pom.xml
+++ b/SyncCommands-spigot/pom.xml
@@ -4,10 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <description>Spigot-Side of SyncCommands.</description>
-    <url>https://efekrbann.xyz</url>
 
     <parent>
-        <groupId>xyz.efekurbann</groupId>
+        <groupId>io.github.efekurbann</groupId>
         <artifactId>SyncCommands</artifactId>
         <version>1.0.1</version>
     </parent>
@@ -55,9 +54,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>xyz.efekurbann</groupId>
+            <groupId>io.github.efekurbann</groupId>
             <artifactId>SyncCommands-common</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
