--- a/SyncCommands-spigot/pom.xml
+++ b/SyncCommands-spigot/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>io.github.efekurbann</groupId>
         <artifactId>SyncCommands</artifactId>
-        <version>1.0.1</version>
+        <version>1.1</version>
     </parent>
 
     <artifactId>SyncCommands-spigot</artifactId>
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>io.github.efekurbann</groupId>
             <artifactId>SyncCommands-common</artifactId>
-            <version>1.0.1</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
