--- a/SyncCommands-common/pom.xml
+++ b/SyncCommands-common/pom.xml
@@ -56,6 +56,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.14.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
