--- a/SyncCommands-common/src/main/resources/config.yml
+++ b/SyncCommands-common/src/main/resources/config.yml
@@ -1,16 +1,17 @@
 serverName: "testServer" # anything you want
 
-# this one also exists on the bungeecord because you can send commands to bungeecord!
 connection: # connection to listen for new commands
-  # currently there are 2 different types; socket and redis.
-  # imo redis is better but its on you.
-  #
-  # you must use the same type as the other servers!
-  type: redis
+  # currently there are 3 different types; socket, redis and rabbitmq.
+  # you must use the same type as the other servers, otherwise it wont work.
+  type: socket
   host: "localhost"
   port: 13861
   password: "supersecretpassword"
   secure: false # if you are going to use socket, I highly recommend you to keep this enabled and change the password.
+
+  # these settings are only for RabbitMQ, if you are not going to use RabbitMQ just ignore this section.
+  username: "guest"
+  vhost: "/"
 
 servers: # connections to send commands, not listen
   server1: # command would be /(b)sync server1 {command}
