Added author section to bungee.yml

--- a/SyncCommands-bungeecord/src/main/resources/bungee.yml
+++ b/SyncCommands-bungeecord/src/main/resources/bungee.yml
@@ -2,3 +2,4 @@ name: SyncCommands
 version: ${project.version}
 main: io.github.efekurbann.synccommands.SyncCommandsBungee
 description: Bungee-Side of SyncCommands
+author: hyperion
