--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,10 @@
 
     <groupId>io.github.efekurbann</groupId>
     <artifactId>SyncCommands</artifactId>
-    <version>3.0</version>
+    <version>3.1</version>
     <packaging>pom</packaging>
+
+    <description>Best Command Synchronization Plugin in the market.</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -45,12 +47,16 @@
                     <configuration>
                         <relocations>
                             <relocation>
-                                <pattern>redis.clients.jedis</pattern>
-                                <shadedPattern>io.github.efekurbann.synccommands.libs.jedis</shadedPattern>
+                                <pattern>redis.clients</pattern>
+                                <shadedPattern>io.github.efekurbann.synccommands.thirdparty.redis.clients</shadedPattern>
                             </relocation>
                             <relocation>
                                 <pattern>org.bstats</pattern>
-                                <shadedPattern>io.github.efekurbann.synccommands.metrics</shadedPattern>
+                                <shadedPattern>io.github.efekurbann.synccommands.thirdparty.org.bstats</shadedPattern>
+                            </relocation>
+                            <relocation>
+                                <pattern>com.rabbitmq</pattern>
+                                <shadedPattern>io.github.efekurbann.synccommands.thirdparty.com.rabbitmq</shadedPattern>
                             </relocation>
                         </relocations>
                     </configuration>
