Create Logger.java and implement it

--- a/.gitignore
+++ b/.gitignore
@@ -95,9 +95,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-SyncCommands-spigot/target/
-SyncCommands-common/target/
-SyncCommands-bungeecord/target/
+*/target/
 
 pom.xml.tag
 pom.xml.releaseBackup
