--- a/synccommands-velocity/pom.xml
+++ b/synccommands-velocity/pom.xml
@@ -10,10 +10,10 @@
         <version>4.0.0</version>
     </parent>
 
-    <artifactId>synccommands-spigot</artifactId>
+    <artifactId>synccommands-velocity</artifactId>
     <packaging>jar</packaging>
 
-    <name>SyncCommands Spigot</name>
+    <name>SyncCommands Velocity</name>
 
     <build>
         <plugins>
@@ -36,37 +36,29 @@
 
     <repositories>
         <repository>
-            <id>spigotmc-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>sonatype</id>
-            <url>https://oss.sonatype.org/content/groups/public/</url>
+            <id>papermc-repo</id>
+            <url>https://papermc.io/repo/repository/maven-public/</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.19-R0.1-SNAPSHOT</version>
+            <groupId>com.velocitypowered</groupId>
+            <artifactId>velocity-api</artifactId>
+            <version>3.1.1</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>io.github.efekurbann</groupId>
             <artifactId>synccommands-common</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>23.0.0</version>
-            <scope>provided</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.bstats</groupId>
-            <artifactId>bstats-bukkit</artifactId>
+            <artifactId>bstats-velocity</artifactId>
             <version>3.0.0</version>
             <scope>compile</scope>
         </dependency>
